--- a/components/toast.module.scss
+++ b/components/toast.module.scss
@@ -13,7 +13,7 @@
   text-align: center; 
   animation: SlideInOut 5s ease-in-out;
   max-width: 400px; 
-  background-color: $color-green-4;
+  background-color: var(--color-primary-accent);
   margin: 0 auto;
   display: flex;
   border-radius: 24px; 
